--- a/live2d-capture/package.json
+++ b/live2d-capture/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "element-plus": "^2.10.1",
     "pinia": "^3.0.3",
+    "pixi.js": "^8.10.1",
     "sass-embedded": "^1.89.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "w3-css": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
