--- a/package.json
+++ b/package.json
@@ -4,19 +4,16 @@
   "description": "Minecraft服务器状态监测平台",
   "main": "src/main.js",
   "scripts": {
-    "serve": "vite",
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "@vitejs/plugin-vue": "^4.5.2",
+    "vite": "^5.0.0"
   }
 }
